objects/SBQQ__Theme__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__HeaderSecondaryFontWeight__c</fullName>
        <inlineHelpText>Font weight of page sub-header (Click the icon for additional information)</inlineHelpText>
        <label>Header Secondary Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                    <default>true</default>
                    <label>400</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderSecondaryTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text in page sub-header (Click the icon for additional information)</inlineHelpText>
        <label>Header Secondary Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text in page header (Click the icon for additional information)</inlineHelpText>
        <label>Header Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HideIcons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will hide the icon square located on the left side of custom page headers</description>
        <inlineHelpText>If checked, will hide the icon square located on the left side of custom page headers.</inlineHelpText>
        <label>Hide Icons on Page Headers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HyperlinkActiveColor__c</fullName>
        <inlineHelpText>Color of active links</inlineHelpText>
        <label>Hyperlink Active Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HyperlinkColor__c</fullName>
        <inlineHelpText>Color of links</inlineHelpText>
        <label>Hyperlink Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HyperlinkDisabledColor__c</fullName>
        <inlineHelpText>Color of disabled links</inlineHelpText>
        <label>Hyperlink Disabled Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HyperlinkHoverColor__c</fullName>
        <inlineHelpText>Hover color of links</inlineHelpText>
        <label>Hyperlink Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconDisabledColor__c</fullName>
        <inlineHelpText>Color of disabled icons</inlineHelpText>
        <label>Icon Disabled Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconFontColor__c</fullName>
        <label>Icon Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconHoverColor__c</fullName>
        <inlineHelpText>Hover color of icons</inlineHelpText>
        <label>Icon Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconMobileCopyBackgroundColor__c</fullName>
        <inlineHelpText>Background color of copy mobile icon</inlineHelpText>
        <label>Mobile Copy Icon Background Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconMobileDeleteBackgroundColor__c</fullName>
        <inlineHelpText>Background color of delete mobile icon</inlineHelpText>
        <label>Mobile Delete Icon Background Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconMobileLineActionColor__c</fullName>
        <inlineHelpText>Color of mobile line action icons</inlineHelpText>
        <label>Mobile Line Action Icon Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconMobileStarBackgroundColor__c</fullName>
        <inlineHelpText>Background color of star mobile icon</inlineHelpText>
        <label>Mobile Star Icon Background Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconMobileStarFillColor__c</fullName>
        <inlineHelpText>Fill color of star mobile icon</inlineHelpText>
        <label>Mobile Star Icon Fill Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconMobileWandBackgroundColor__c</fullName>
        <inlineHelpText>Background color of wand mobile icon</inlineHelpText>
        <label>Mobile Wand Icon Background Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconPageLoadingColor__c</fullName>
        <inlineHelpText>Color of page loading icon</inlineHelpText>
        <label>Page Loading Icon Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__InputOutlineColor__c</fullName>
        <inlineHelpText>Outline color of input forms on focus</inlineHelpText>
        <label>Input Outline Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__InputOutlineWidth__c</fullName>
        <inlineHelpText>Outline width of input forms on focus</inlineHelpText>
        <label>Input Outline Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__LoadingMaskColor__c</fullName>
        <inlineHelpText>Color of loading mask when navigating to a new page</inlineHelpText>
        <label>Loading Mask Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NavigationDrawerColor__c</fullName>
        <inlineHelpText>Background color of navigation side panels</inlineHelpText>
        <label>Navigation Drawer Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NavigationDrawerFontColor__c</fullName>
        <inlineHelpText>Font color of navigation side panels</inlineHelpText>
        <label>Navigation Drawer Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NavigationDrawerHeaderColor__c</fullName>
        <inlineHelpText>Background color of navigation side panel headers</inlineHelpText>
        <label>Navigation Drawer Header Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NavigationDrawerHeaderFontColor__c</fullName>
        <inlineHelpText>Font color of navigation side panel headers</inlineHelpText>
        <label>Navigation Drawer Header Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NavigationDrawerRowColor__c</fullName>
        <inlineHelpText>Background color of rows in navigation side panels</inlineHelpText>
        <label>Navigation Drawer Row Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NavigationDrawerRowHoverColor__c</fullName>
        <inlineHelpText>Background color of hovered rows in navigation side panels</inlineHelpText>
        <label>Navigation Drawer Row Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NavigationDrawerRowSelectedColor__c</fullName>
        <inlineHelpText>Background color of selected row in navigation side panels</inlineHelpText>
        <label>Navigation Drawer Row Selected Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentLineRowFontColor__c</fullName>
        <inlineHelpText>Font color of parent line rows in quote line editor</inlineHelpText>
        <label>Parent Line Row Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentLineRowFontStyle__c</fullName>
        <inlineHelpText>Font style of parent line rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Parent Line Row Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>italic</fullName>
                </value>
                <value>
                    <fullName>oblique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentLineRowFontWeight__c</fullName>
        <inlineHelpText>Font weight of parent line rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Parent Line Row Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                    <default>true</default>
                    <label>400</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentLineRowTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text of parent line rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Parent Line Row Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryButtonColor__c</fullName>
        <label>Brand Button Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryButtonFontColor__c</fullName>
        <label>Brand Button Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryButtonHoverColor__c</fullName>
        <label>Brand Button Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RadioButtonColorChecked__c</fullName>
        <inlineHelpText>Color of selected radio button</inlineHelpText>
        <label>Radio Button Color Checked</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RadioButtonColorUnchecked__c</fullName>
        <inlineHelpText>Color of unselected radio button</inlineHelpText>
        <label>Radio Button Color Unchecked</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SecondaryFontColor__c</fullName>
        <label>Secondary Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SecondaryHeaderColor__c</fullName>
        <label>Secondary Header Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectBackgroundColor__c</fullName>
        <inlineHelpText>Background color of drop-down menus</inlineHelpText>
        <label>Picklist Background Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectBorderColor__c</fullName>
        <inlineHelpText>Border color of drop-down menus</inlineHelpText>
        <label>Picklist Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectBorderRadius__c</fullName>
        <inlineHelpText>Border radius of drop-down menus</inlineHelpText>
        <label>Picklist Border Radius</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectBorderStyle__c</fullName>
        <inlineHelpText>Border style of drop-down menus</inlineHelpText>
        <label>Picklist Border Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>hidden</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashed</fullName>
                </value>
                <value>
                    <fullName>solid</fullName>
                    <default>true</default>
                    <label>solid</label>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>grove</fullName>
                </value>
                <value>
                    <fullName>ridge</fullName>
                </value>
                <value>
                    <fullName>inset</fullName>
                </value>
                <value>
                    <fullName>outset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SelectBorderWidth__c</fullName>
        <inlineHelpText>Border width of drop-down menus</inlineHelpText>
        <label>Picklist Border Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectContractHideSkipActionOnAddOn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will hide the Skip action button on the contract selector page for add-on workflow</description>
        <inlineHelpText>If checked, will hide the Skip action button on the contract selector page for add-on workflow</inlineHelpText>
        <label>Hide Skip Action (Add-on Workflow)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectContractHideSkipActionOnAmend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will hide the Skip action button on the contract selector page for amend workflow</description>
        <inlineHelpText>If checked, will hide the Skip action button on the contract selector page for amend workflow</inlineHelpText>
        <label>Hide Skip Action (Amend Workflow)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectHeight__c</fullName>
        <inlineHelpText>Height of drop-down menus</inlineHelpText>
        <label>Picklist Border Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectPaddingBottom__c</fullName>
        <inlineHelpText>Bottom padding of drop-down menus</inlineHelpText>
        <label>Picklist Bottom Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectPaddingLeft__c</fullName>
        <inlineHelpText>Left padding of drop-down menus</inlineHelpText>
        <label>Picklist Left Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectPaddingRight__c</fullName>
        <inlineHelpText>Right padding of drop-down menus</inlineHelpText>
        <label>Picklist Right Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelectPaddingTop__c</fullName>
        <inlineHelpText>Top padding of drop-down menus</inlineHelpText>
        <label>Picklist Top Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandaloneProductRowFontColor__c</fullName>
        <inlineHelpText>Font color of standalone product rows in quote line editor</inlineHelpText>
        <label>Standalone Product Row Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandaloneProductRowFontStyle__c</fullName>
        <inlineHelpText>Font style of standalone product rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Standalone Product Row Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>italic</fullName>
                </value>
                <value>
                    <fullName>oblique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__StandaloneProductRowFontWeight__c</fullName>
        <inlineHelpText>Font weight of standalone product rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Standalone Product Row Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                    <default>true</default>
                    <label>400</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__StandaloneProductRowTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text in standalone product rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Standalone Product Row Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonBorderRadius__c</fullName>
        <inlineHelpText>Border radius of standard buttons (Click the icon for additional information)</inlineHelpText>
        <label>Standard Button Border Radius</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonDisabledBackgroundColor__c</fullName>
        <inlineHelpText>Background color of disabled standard buttons</inlineHelpText>
        <label>Standard Button Disabled Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonFontFamily__c</fullName>
        <inlineHelpText>Font family for standard buttons</inlineHelpText>
        <label>Standard Button Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonFontSize__c</fullName>
        <inlineHelpText>Font size of standard buttons</inlineHelpText>
        <label>Standard Button Font Size</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonFontWeight__c</fullName>
        <inlineHelpText>Font weight of standard buttons (Click the icon for additional information)</inlineHelpText>
        <label>Standard Button Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                    <default>true</default>
                    <label>400</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonPaddingBottom__c</fullName>
        <inlineHelpText>Bottom padding of standard buttons</inlineHelpText>
        <label>Standard Button Bottom Padding</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonPaddingLeft__c</fullName>
        <inlineHelpText>Left padding of standard buttons</inlineHelpText>
        <label>Standard Button Left Padding</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonPaddingRight__c</fullName>
        <inlineHelpText>Right padding of standard buttons</inlineHelpText>
        <label>Standard Button Right Padding</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandardButtonPaddingTop__c</fullName>
        <inlineHelpText>Top padding of standard buttons</inlineHelpText>
        <label>Standard Button Top Padding</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TabColor__c</fullName>
        <inlineHelpText>Color of tabs</inlineHelpText>
        <label>Tab Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TabFontFamily__c</fullName>
        <inlineHelpText>Font family of tabs</inlineHelpText>
        <label>Tab Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TabHoverColor__c</fullName>
        <inlineHelpText>Hover color of tabs</inlineHelpText>
        <label>Tab Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TabSelectedColor__c</fullName>
        <label>Tab Selected Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableCellPaddingBottom__c</fullName>
        <inlineHelpText>Bottom padding of table cell</inlineHelpText>
        <label>Table Cell Bottom Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableCellPaddingLeft__c</fullName>
        <inlineHelpText>Left padding of table cell</inlineHelpText>
        <label>Table Cell Left Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableCellPaddingRight__c</fullName>
        <inlineHelpText>Right padding of table cell</inlineHelpText>
        <label>Table Cell Right Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableCellPaddingTop__c</fullName>
        <inlineHelpText>Top padding of table cell</inlineHelpText>
        <label>Table Cell Top Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableGroupedRowBackgroundColor__c</fullName>
        <inlineHelpText>Background color of collapsible rows in a table</inlineHelpText>
        <label>Grouped Row Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableGroupedRowBorderBottomColor__c</fullName>
        <inlineHelpText>Bottom border color of collapsible rows in a table</inlineHelpText>
        <label>Grouped Row Border Bottom Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
</CustomObject>